feature(view-questions):implement functionality to view all questions
[Delivers #168948439]
