# src/routes/question.js
@@ -5,10 +5,16 @@ import middlewares from '../middlewares';
 const question = express.Router();
 const QUESTION_URL = '/questions';
 
-const { askQuestion } = QuestionController;
-const { QuestionValidators: { askQuestionValidators }, verifyToken } = middlewares;
+const { askQuestion, viewQuestions } = QuestionController;
+const {
+  QuestionValidators: { askQuestionValidators, viewQuestionsValidators },
+  verifyToken
+} = middlewares;
 
 // ask question route
 question.post(`${QUESTION_URL}`, verifyToken, askQuestionValidators(), askQuestion);
+
+// view questions route
+question.get(`${QUESTION_URL}`, verifyToken, viewQuestionsValidators(), viewQuestions);
 
 export default question;
